[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Components/Weapons/ProjectileWeapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Components/TriggerOutputSystem.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Component/Weapon.gd" type="Script" id=3]
[ext_resource path="res://scripts/Component/Base/TriggerOutputMount.gd" type="Script" id=4]
[ext_resource path="res://objects/Components/WeaponSystems/MunitionsLoadingSystem.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Component/WeaponHardpoint.gd" type="Script" id=6]
[ext_resource path="res://scripts/Component/MunitionLoadingMount.gd" type="Script" id=7]

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )

[node name="TriggerOutputMount" type="Node2D" parent="."]
script = ExtResource( 4 )
initial_output_mounts = [ NodePath("../ProjectileSystemMount") ]

[node name="TriggerOutputSystem" parent="TriggerOutputMount" instance=ExtResource( 2 )]
scale = Vector2( 0.994186, 1 )
trigger_setting = 1

[node name="ProjectileSystemMount" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="ProjectileWeapon" parent="ProjectileSystemMount" instance=ExtResource( 1 )]

[node name="MunitionsLoadingMount" type="Node2D" parent="."]
script = ExtResource( 7 )
initial_output_mounts = [ NodePath("../ProjectileSystemMount") ]

[node name="MunitionsLoadingSystem" parent="MunitionsLoadingMount" instance=ExtResource( 5 )]
